--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -19,26 +19,6 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:text="Pick a Unique Name for this Plant"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_marginTop="44dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Plant Name"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
-
-    <TextView
         android:text="What Type of Plant is This?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,10 +45,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/editText"
         android:textAppearance="@style/TextAppearance.AppCompat"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        tools:text="Plant Name" />
+
+    <TextView
+        android:text="Pick a Unique Name for this Plant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_marginTop="44dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Check Description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/button2" />
+
+    <AutoCompleteTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/plant_list"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        tools:text="Plant Name"
         android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true" />
+
 </RelativeLayout>
