added the ability to check wikipedia description of a plant

--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -27,20 +27,6 @@
         android:layout_marginTop="11dp"
         android:id="@+id/textView3" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
-
-        <Button
-            android:text="Submit!"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/button" />
-    </LinearLayout>
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,9 +51,12 @@
         android:text="Check Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/button2"
         android:layout_below="@+id/textView3"
         android:layout_alignParentEnd="true"
-        android:id="@+id/button2" />
+        android:layout_toEndOf="@+id/textView2"
+        android:onClick="checkDescription"
+        android:textAppearance="@style/TextAppearance.AppCompat" />
 
     <AutoCompleteTextView
         android:layout_width="wrap_content"
@@ -77,5 +66,14 @@
         tools:text="Plant Name"
         android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Add Plant!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_plant"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="addNewPlant" />
 
 </RelativeLayout>
