--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -22,21 +22,10 @@
         android:text="What Type of Plant is This?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/plant_name"
         android:layout_alignParentStart="true"
         android:layout_marginTop="11dp"
         android:id="@+id/textView3" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        tools:text="Plant Name" />
 
     <TextView
         android:text="Pick a Unique Name for this Plant"
@@ -48,15 +37,13 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Check Description"
+        android:text="Add Plant!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/textView2"
-        android:onClick="checkDescription"
-        android:textAppearance="@style/TextAppearance.AppCompat" />
+        android:id="@+id/add_plant"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="addNewPlant" />
 
     <AutoCompleteTextView
         android:layout_width="wrap_content"
@@ -65,15 +52,28 @@
         android:textAppearance="@style/TextAppearance.AppCompat"
         tools:text="Plant Name"
         android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/plant_name" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/plant_name"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        tools:text="Plant Name"
+        android:layout_below="@+id/textView"
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Add Plant!"
+        android:text="Check Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/add_plant"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="addNewPlant" />
+        android:id="@+id/button2"
+        android:onClick="checkDescription"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
