--- a/app/src/main/res/layout/content_database_contribution.xml
+++ b/app/src/main/res/layout/content_database_contribution.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_controbute_to_database"
+    android:id="@+id/content_database_contribution"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,15 +10,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="edu.upenn.cis350.botanist.ControbuteToDatabaseActivity"
-    tools:showIn="@layout/activity_controbute_to_database">
+    tools:context="edu.upenn.cis350.botanist.DatabaseContributionActivity"
+    tools:showIn="@layout/activity_database_contribution">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -37,42 +37,47 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:weightSum="1">
 
             <TextView
-                android:text="Plant Name"
-                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/textView7"
-                android:layout_weight="0.24" />
-
-            <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/textView8"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.Material.Widget.EditText" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
-
-            <TextView
-                android:text="Website"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/textView10"
-                android:layout_weight="0.34" />
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
+                android:text="Plant Name"
+                android:layout_width="100dp" />
 
             <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView9"
+                android:id="@+id/new_plant"
                 android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:weightSum="1">
+
+            <TextView
+                android:text="Website"
+                android:layout_height="match_parent"
+                android:id="@+id/textView10"
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
+                android:layout_weight="0.01"
+                android:layout_width="100dp" />
+
+            <EditText
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editText3"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_width="228dp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -82,17 +87,28 @@
 
             <TextView
                 android:text="Light Needs"
-                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/textView12"
-                android:layout_weight="0.47" />
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
+                android:layout_width="95dp"
+                android:layout_weight="2.55" />
 
-            <TextView
-                android:text="TextView"
+            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView11"
-                android:layout_weight="1" />
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editText2"
+                android:layout_weight="31.75"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
         </LinearLayout>
+
+        <Button
+            android:text="Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/button4"
+            android:onClick="submit" />
     </LinearLayout>
 </RelativeLayout>
